--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
+# Other Files
+*.pdf
+*.txt
+!requirements.txt
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[codz]
@@ -143,6 +148,7 @@ venv/
 ENV/
 env.bak/
 venv.bak/
+papersummary_venv
 
 # Spyder project settings
 .spyderproject
