--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,9 +1,17 @@
-name: Pylint
+name: Continious Integration
 
-on: [push]
+on:
+  push:
+    branches:
+      - main
+  pull_request:
+    branches:
+      - main
+
 
 jobs:
-  build:
+
+  pylint:
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -17,7 +25,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install pylint
+        pip install -e .[dev]
     - name: Analysing the code with pylint
       run: |
-        pylint $(git ls-files '*.py')
+        pylint papersummary
