--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ readme = "README.md"
 
 dependencies = [
     "PyPDF2",
+    "pypdf",
     "pyinstaller",
     "python-pptx",
     "python-docx",
@@ -28,6 +29,7 @@ dependencies = [
 dev = [
     "black",
     "pytest",
+    "pytest-cov",
     "pylint"
 ]
 full = ["papersummary[dev]"]
@@ -48,8 +50,8 @@ version = {attr = "papersummary.__version__"}
 
 # black
 [tool.black]
-line-length = 88
-target-version = ['py38', 'py39', 'py310']
+line-length = 120
+target-version = ['py310']
 include = '\.pyi?$'
 exclude = '''
 /(
@@ -71,7 +73,14 @@ disable = "line-too-long, missing-final-newline, trailing-whitespace, bare-excep
 [tool.pylint.format]
 max-line-length = 120
 
+[tool.coverage.run]
+branch = true
+source = ["papersummary"]
+
+[tool.coverage.report]
+show_missing = true
+skip_covered = true
+
 [tool.pytest.ini_options]
-minversion = "7.0"
-addopts = "--strict-markers --import-mode=importlib"
+addopts = "--cov=papersummary --cov-report=xml --cov-report=term --junitxml=report.xml"
 testpaths = ["tests"]
